--- a/TripleJAuto/TripleJAuto/Admin.Master
+++ b/TripleJAuto/TripleJAuto/Admin.Master
@@ -35,28 +35,22 @@
                             <DynamicSelectedStyle BackColor="#507CD1" />
                             <Items>
                                 <asp:MenuItem Text="User Administration" Value="User Administration">
-                                    <asp:MenuItem Text="Add User" Value="Add User"></asp:MenuItem>
-                                    <asp:MenuItem Text="Remove User" Value="Remove User"></asp:MenuItem>
-                                    <asp:MenuItem Text="View Users" Value="View Users"></asp:MenuItem>
                                 </asp:MenuItem>
                                 <asp:MenuItem Text="Manage Orders" Value="Manage Orders">
-                                    <asp:MenuItem Text="View New Orders" Value="View New Orders"></asp:MenuItem>
-                                    <asp:MenuItem Text="Edit Order" Value="Edit Order"></asp:MenuItem>
-                                    <asp:MenuItem Text="Cancel Order" Value="Cancel Order"></asp:MenuItem>
                                 </asp:MenuItem>
                                 <asp:MenuItem Text="Inventory" Value="Inventory">
-                                    <asp:MenuItem Text="Add Items" Value="Add Items"></asp:MenuItem>
-                                    <asp:MenuItem Text="Edit Item" Value="Edit Item"></asp:MenuItem>
                                 </asp:MenuItem>
                             </Items>
                             <StaticHoverStyle BackColor="#284E98" ForeColor="White" />
                             <StaticMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
                             <StaticSelectedStyle BackColor="#507CD1" />
                         </asp:Menu>
-
-                   
-
                     </div>
+                    <div style="width:1366px; height:30px; background-color:lightskyblue; color:#444; float: left">
+                        <asp:ContentPlaceHolder ID="ContentPlaceHolder3" runat="server">
+                        </asp:ContentPlaceHolder>
+                    </div>
+
 
                     <div style="width:1366px; height:auto; min-height:682px; background-color:lightskyblue; color:#444; float: left">
                         <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
