--- a/TripleJAuto/TripleJAuto/Content/Site.css
+++ b/TripleJAuto/TripleJAuto/Content/Site.css
@@ -3,14 +3,15 @@
 }
 
 .navigation {
-    width: 100%;
-    height: 5%;
-    font-size: 30px;
+    float: left;
+    width: 18%;
+    height: auto;
+    font-size: 18px;
     font-family: Helvetica;
     font-weight: bold;
-    text-align: center;
+    /*text-align: center;*/
     border-radius: 8px;
-    padding: 1%;
+    padding-left: 5%;
 }
 
 .navigation ul {
@@ -20,8 +21,7 @@
 }
 
 .navigation li {
-    display: inline;
-    padding: 2%;
+       padding: 2%;
 }
 
 .navigation a {
@@ -30,7 +30,38 @@
     padding: 8px 8px 8px 8px;
 }
 
+.body-content {
+    float: right;
+    width: 72%;
+}
+
 .footer {
+    width: 100%;
     text-align: center;
     color: #539ca5;
+    padding-top: 2%;
+}
+
+.container {
+    width: 100%;
+    height: auto;
+    font-family: Helvetica;
+    padding-left: 5%;
+}
+
+.container table {
+   width: auto;
+   height: auto;
+}
+
+.container table tr {
+    color: #539ca5;
+}
+
+.container table td {
+    width: 30%;
+    color: #539ca5;
+    font-size: 30px;
+    text-align: center;
+    padding: 1% 0px;
 }
