--- a/TripleJAuto/TripleJAuto/Content/Site.css
+++ b/TripleJAuto/TripleJAuto/Content/Site.css
@@ -1,127 +1,110 @@
 ﻿html {
-    background-color: #606060;
+    background-color: white;
 }
 
-.navigation {
-    float: left;
-    width: 18%;
-    height: auto;
+.table-header {
+    background-color:  #717D8C;
+    width: 100%;
+}
+
+.header-content {
+    float: right;
+    height: 20px;
+    width: 700px;
+    word-spacing: 10px;
+    text-align: right;
+    padding-right: 100px;
+    padding-top: 110px;
+    padding-bottom: 10px;
+    background-color:  #717D8C;
+
+}
+
+.header-content a {
+    color: #7ac1ae;
     font-size: 18px;
     font-family: Helvetica;
-    font-weight: bold;
-    /*text-align: center;*/
-    border-radius: 8px;
-    padding-left: 5%;
-}
-
-.navigation ul {
-    height: auto;
-    padding: 1% 0px;
-    margin: 0px;
-}
-
-.navigation li {
-       padding: 2%;
-}
-
-.navigation a {
     text-decoration: none;
-    color: #539ca5;
-    padding: 8px 8px 8px 8px;
 }
 
-.body-content {
-    float: right;
-    width: 72%;
-}
 
 .container {
     height: auto;
-    color: #539ca5;
-    font-family: Helvetica;
-    padding-left: 5%;
+    padding-left: 300px;
+    padding-top: 10px;
 }
 
 .container-header {
-    width: 50%;
+    width: 420px;
+    color: #7ac1ae;
+    font-family: Helvetica;
     text-align: center;
 }
 
 .container table {
    width: 50%;
    height: auto;
-   text-align: center;
-}
-
-.container table tr {
-    color: #539ca5;
 }
 
 .container table td {
     width: 30%;
-    color: #539ca5;
-    font-size: 30px;
+    color: #7ac1ae;
+    font-size: 20px;
     text-align: center;
-    padding: 1% 0px;
 }
 
 .container a {
     text-decoration: none;
-    color: #539ca5;
+    color: #7ac1ae;
     padding: 8px 8px 8px 8px;
 }
 
-.home-container {
-    height: auto;
-    color: #539ca5;
+.navigation {
+    width: 307px;
+    height: 600px;
+    background-color: #DDDDDD;
+    font-size: 18px;
     font-family: Helvetica;
-    padding-left: 5%;
+    font-weight: bold;
+    padding-left: 15px;
+    padding-top: 150px;
 }
 
-.home-header {
-    width: 50%;
-    text-align: center;
+.navigation li {
+    padding: 2%;
+    list-style-type: none;
 }
 
-.home-container table {
-   width: 50%;
-   height: auto;
-   text-align: center; 
-}
-
-.home-container table tr {
-    color: #539ca5;
-}
-
-.home-container table td {
-    width: 30%;
-    color: #539ca5;
-    font-size: 30px;
-    text-align: center;
-    padding: 1% 0px;
-}
-
-.home-container a {
+.navigation a {
     text-decoration: none;
-    color: #539ca5;
+    color: #7ac1ae;
     padding: 8px 8px 8px 8px;
 }
+
+.body-content {
+    width: 1108px;
+}
+
+.table-footer {
+    width: 100%;
+}
+
 
 .footer {
     width: 100%;
+    height: 50px;
     text-align: center;
-    color: #539ca5;
-    margin: 0 auto;
-    padding-top: 6%;
+
+    background-color:  #717D8C;
+    padding-top: 3%;
     padding-bottom: 2%;
-    position: absolute;
-    bottom: -125px;
-    left: 5px;
 }
 
 .footer a {
     text-decoration: none;
     font-family: Helvetica;
-    color: #539ca5;
+    font-size: 22px;
+    color: #7ac1ae;
+    margin: 0 auto;
     padding: 8px 8px 8px 8px;
 }
