--- a/TripleJAuto/TripleJAuto/Admin.Master
+++ b/TripleJAuto/TripleJAuto/Admin.Master
@@ -32,30 +32,11 @@
                 </td>
             </tr>
         </table>
-        <table class="nav">
-            <tr>
-                <td>
-                    <div class="navigation">
-                        <ul>
-                            <li><a runat="server" href="~/Home.aspx">Home</a></li>
-                            <li><a runat="server" href="~/AirConditioning.aspx">Air Conditioning</a></li>
-                            <li><a runat="server" href="~/BatteryAccessories.aspx">Battery & Accessories</a></li>
-                            <li><a runat="server" href="~/BeltsHoses.aspx">Belts & Hoses</a></li>
-                            <li><a runat="server" href="~/BodyTrim.aspx">Body & Trim</a></li>
-                            <li><a runat="server" href="~/Brakes.aspx">Brakes</a></li>
-                            <li><a runat="server" href="~/engineParts.aspx">Engine Parts & Mounts</a></li>
-                            <li><a runat="server" href="~/exhaust.aspx">Exhaust</a></li>
-                        </ul>
-                    </div>
-                </td>
-                <td>
-                    <div class="body-content">
-                        <asp:ContentPlaceHolder ID="MainContent" runat="server">
-                        </asp:ContentPlaceHolder>
-                    </div>
-                </td>
-            </tr>
-        </table>
+            <div class="body-content" style="width: auto; margin: 0 auto">
+                <asp:ContentPlaceHolder ID="MainContent" runat="server">
+                </asp:ContentPlaceHolder>
+            </div>
+
         <table class="table-footer">
             <tr>
                 <td>
