--- a/TripleJAuto/TripleJAuto/Admin.Master
+++ b/TripleJAuto/TripleJAuto/Admin.Master
@@ -40,9 +40,11 @@
                     <asp:MenuItem NavigateUrl="~/User_Administration.aspx" Text="Users" Value="Users">
                         <asp:MenuItem Text="User Orders" Value="User Orders"></asp:MenuItem>
                         <asp:MenuItem Text="Wishlists" Value="Wishlists"></asp:MenuItem>
+                        <asp:MenuItem NavigateUrl="~/AdminPartsReviews.aspx" Text="Reviews" Value="Reviews"></asp:MenuItem>
                     </asp:MenuItem>
-                    <asp:MenuItem NavigateUrl="~/Admin_parts.aspx" Text="Parts" Value="Parts">
-                        <asp:MenuItem Text="Reviews" Value="Reviews"></asp:MenuItem>
+                    <asp:MenuItem NavigateUrl="~/AdminParts.aspx" Text="Parts" Value="Parts">
+                        <asp:MenuItem NavigateUrl="~/AdminParts.aspx" Text="View Parts" Value="View Parts"></asp:MenuItem>
+                        <asp:MenuItem NavigateUrl="~/AdminPartsAdd.aspx" Text="Add Parts" Value="Add Parts"></asp:MenuItem>
                     </asp:MenuItem>
                 </Items>
                 <StaticHoverStyle BackColor="#284E98" ForeColor="White" />
