added login/logout button to admin pages, added Site Admin link to main page

--- a/TripleJAuto/TripleJAuto/Admin.Master
+++ b/TripleJAuto/TripleJAuto/Admin.Master
@@ -37,6 +37,7 @@
                 <DynamicMenuStyle BackColor="#B5C7DE" />
                 <DynamicSelectedStyle BackColor="#507CD1" />
                 <Items>
+                    <asp:MenuItem NavigateUrl="~/Home.aspx" Text="Home" Value="Home"></asp:MenuItem>
                     <asp:MenuItem NavigateUrl="~/User_Administration.aspx" Text="Users" Value="Users">
                         <asp:MenuItem Text="User Orders" Value="User Orders" NavigateUrl="~/AdminUserOrders.aspx"></asp:MenuItem>
                         <asp:MenuItem Text="Wishlists" Value="Wishlists"></asp:MenuItem>
