--- a/TripleJAuto/TripleJAuto/Site.Master
+++ b/TripleJAuto/TripleJAuto/Site.Master
@@ -45,6 +45,7 @@
                             <li><a runat="server" href="~/Brakes.aspx">Brakes</a></li>
                             <li><a runat="server" href="~/engineParts.aspx">Engine Parts & Mounts</a></li>
                             <li><a runat="server" href="~/exhaust.aspx">Exhaust</a></li>
+                            <li><a runat="server" href="User_Administration.aspx">Site Admin</a></li>
                         </ul>
                     </div>
                 </td>
